--- a/app/src/main/res/layout/activity_adminnotifications.xml
+++ b/app/src/main/res/layout/activity_adminnotifications.xml
@@ -9,7 +9,7 @@
         style="?attr/materialCardViewFilledStyle"
         android:layout_width="420dp"
         android:layout_height="130dp"
-        app:cardBackgroundColor="@color/neutral">
+        app:cardBackgroundColor="@color/grey">
 
         <ImageView
             android:id="@+id/left_arrow"
@@ -90,8 +90,7 @@
         android:layout_width="420dp"
         android:layout_height="150dp"
         android:layout_marginTop="675dp"
-        app:cardBackgroundColor="@color/neutral
-">
+        app:cardBackgroundColor="@color/grey">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,7 +107,7 @@
                 app:srcCompat="@drawable/task"/>
 
             <ImageView
-                android:id="@+id/calendar"
+                android:id="@+id/barchart"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="55dp"
