--- a/app/src/main/res/layout/activity_adminprofile.xml
+++ b/app/src/main/res/layout/activity_adminprofile.xml
@@ -9,7 +9,7 @@
         style="?attr/materialCardViewFilledStyle"
         android:layout_width="420dp"
         android:layout_height="130dp"
-        app:cardBackgroundColor="@color/neutral">
+        app:cardBackgroundColor="@color/grey">
 
         <ImageView
             android:id="@+id/left_arrow"
@@ -26,7 +26,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginLeft="20dp"
             android:fontFamily="@font/alfa_slab_one"
-            android:text="Notifications"
+            android:text="Profile"
             android:textSize="29sp"/>
 
         <LinearLayout
@@ -51,37 +51,7 @@
         android:layout_height="542dp"
         android:layout_marginTop="131dp">
 
-        <!-- Notification Form -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
 
-            <EditText
-                android:id="@+id/editTextTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Title"/>
-
-            <EditText
-                android:id="@+id/editTextMessage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Message"/>
-
-            <EditText
-                android:id="@+id/editTextRecipient"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Recipient (leave blank to send to all)"/>
-
-            <Button
-                android:id="@+id/buttonSend"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Send Notification"/>
-        </LinearLayout>
     </ScrollView>
 
     <com.google.android.material.card.MaterialCardView
@@ -90,8 +60,7 @@
         android:layout_width="420dp"
         android:layout_height="150dp"
         android:layout_marginTop="675dp"
-        app:cardBackgroundColor="@color/neutral
-">
+        app:cardBackgroundColor="@color/grey">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,7 +77,7 @@
                 app:srcCompat="@drawable/task"/>
 
             <ImageView
-                android:id="@+id/calendar"
+                android:id="@+id/barchart"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="55dp"
