--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
 
 
         <TextView
+            android:id="@+id/usercurrenttime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
@@ -35,6 +36,7 @@
             android:textSize="24sp" />
 
         <TextView
+            android:id="@+id/username"
             android:layout_width="110dp"
             android:layout_height="49dp"
             android:layout_marginLeft="20dp"
@@ -80,6 +82,7 @@
                 android:textSize="24sp" />
 
             <!-- Horizontal ScrollView for cards -->
+
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -108,10 +111,23 @@
                             android:layout_height="match_parent"
                             android:orientation="vertical">
 
+                            <TextView
+                                android:id="@+id/task_text_view_3"
+                                android:layout_width="149dp"
+                                android:layout_height="135dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:gravity="center"
+                                android:text="No task assigned"
+                                android:textSize="18sp" />
+
                             <ImageView
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
                                 android:scaleType="centerCrop" />
+
+
                         </LinearLayout>
                     </com.google.android.material.card.MaterialCardView>
 
@@ -128,10 +144,22 @@
                             android:layout_height="match_parent"
                             android:orientation="vertical">
 
+                            <TextView
+                                android:id="@+id/task_text_view_4"
+                                android:layout_width="149dp"
+                                android:layout_height="135dp"
+                                android:gravity="center"
+                                android:text="No task assigned"
+                                android:textSize="18sp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp" />
+
                             <ImageView
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="centerCrop" />
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:scaleType="centerCrop"
+                                 />
                         </LinearLayout>
                     </com.google.android.material.card.MaterialCardView>
 
@@ -149,10 +177,23 @@
                             android:layout_height="match_parent"
                             android:orientation="vertical">
 
+                            <TextView
+                                android:id="@+id/task_text_view_5"
+                                android:layout_width="149dp"
+                                android:layout_height="135dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:gravity="center"
+                                android:text="No task assigned"
+                                android:textColor="#F8F4F4"
+                                android:textSize="18sp" />
+
                             <ImageView
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="centerCrop" />
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:scaleType="centerCrop"
+                                 />
                         </LinearLayout>
                     </com.google.android.material.card.MaterialCardView>
 
@@ -179,6 +220,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
 
                     <ImageView
                         android:layout_width="match_parent"
