--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,7 +9,7 @@
         style="?attr/materialCardViewFilledStyle"
         android:layout_width="420dp"
         android:layout_height="130dp"
-        app:cardBackgroundColor="@color/grey">
+        app:cardBackgroundColor="@color/neutral">
 
         <ImageView
             android:id="@+id/left_arrow"
@@ -60,7 +60,7 @@
         android:layout_width="420dp"
         android:layout_height="150dp"
         android:layout_marginTop="675dp"
-        app:cardBackgroundColor="@color/grey">
+        app:cardBackgroundColor="@color/neutral">
 
         <LinearLayout
             android:layout_width="match_parent"
